adicionado chat, corrigido menu e adicionado categorias automaticas

--- a/src/raven/application/form/other/FormInbox.form
+++ b/src/raven/application/form/other/FormInbox.form
@@ -113,7 +113,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="cc" green="cc" red="cc" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Cliente Help Desk"/>
+            <Property name="text" type="java.lang.String" value="Suporte - TechSize"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="terminalt">
