--- a/src/raven/application/form/other/FormInbox.form
+++ b/src/raven/application/form/other/FormInbox.form
@@ -50,9 +50,6 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
-                  <Component id="terminalt" min="-2" pref="17" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="btnMin" min="-2" pref="25" max="-2" attributes="0"/>
@@ -67,13 +64,10 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Component id="btnX" alignment="0" max="32767" attributes="0"/>
               <Group type="102" alignment="0" attributes="0">
-                  <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="terminalt" alignment="1" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Group type="103" alignment="1" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="jLabel2" alignment="1" max="32767" attributes="0"/>
-                          <Component id="btnMin" alignment="1" pref="25" max="32767" attributes="0"/>
-                          <Component id="btnMax" alignment="1" pref="25" max="32767" attributes="0"/>
-                      </Group>
+                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                      <Component id="jLabel2" alignment="1" max="32767" attributes="0"/>
+                      <Component id="btnMin" alignment="1" pref="25" max="32767" attributes="0"/>
+                      <Component id="btnMax" alignment="1" pref="25" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
@@ -115,8 +109,6 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Suporte - TechSize"/>
           </Properties>
-        </Component>
-        <Component class="javax.swing.JLabel" name="terminalt">
         </Component>
       </SubComponents>
     </Container>
